fixed coffee spacings

--- a/index.css
+++ b/index.css
@@ -221,6 +221,7 @@
   position: absolute;
   margin: 0 !important;
   top: 35.9px;
+  bottom: 50px;
   right: 0.85%;
   left: 0.57%;
   border-radius: var(--br-25xl);
@@ -350,11 +351,6 @@
   font-family: var(--body-text);
   color: var(--color-dimgray-300);
 }
-.noncoffee-animation {
-  width: 255px;
-  position: relative;
-  height: 452.5px;
-}
 .chocolates {
   position: absolute;
   height: 14.34%;
@@ -474,9 +470,7 @@
 }
 .product-box2 {
   position: absolute;
-  height: 70.98%;
-  width: 100%;
-  top: 29.02%;
+  top: 130px;
   right: 0;
   bottom: 0;
   left: 0;
@@ -484,6 +478,7 @@
   border-radius: var(--br-7xl);
   background-color: var(--color-linen);
 }
+
 .coffee-extras1,
 .coffee-extras2,
 .coffee_drink {
@@ -508,7 +503,7 @@
   left: 10.79%;
   object-fit: cover;
 }
-.americano,
+.coffee_text,
 .coffee_price {
   position: absolute;
   height: 7.74%;
@@ -526,57 +521,30 @@
   font-family: var(--body-text);
   color: var(--color-dimgray-300);
 }
-.americano-animation,
-.cafe-latte-animation {
+.coffee_animation {
   position: absolute;
   top: 0;
-  left: 59px;
-  width: 252px;
-  height: 447px;
+  left: 20px;
+  width: 250px;
+  height: 450px;
 }
-.cafe-latte-animation {
-  left: 328px;
+#Americano_card{
+  left: 10px;
 }
-
-.spanish-latte-animation {
-  position: absolute;
-  top: 1px;
-  left: 597px;
-  width: 251px;
-  height: 447px;
+#cafe_card{
+  left: 270px;
 }
-.matcha-latte-animation,
-.mocha-latte-animation {
-  position: absolute;
-  top: 0;
-  left: 865px;
-  width: 252px;
-  height: 447px;
+#spanish_card{
+  left: 530px;
 }
-.matcha-latte-animation {
-  left: 1134px;
+#mocha_card{
+  left: 790px;
 }
-.coffee-extras1,
-.coffee-extras2 {
-  position: absolute;
-  height: 14.34%;
-  width: 31.55%;
-  top: 40.11%;
-  bottom: 45.55%;
-  left: 25%;
-  right: 20%;
-  overflow: hidden;
-  max-height: 100%;
-  max-width: 100%;
-  object-fit: contain;
+#matcha_card{
+  left: 1050px;
 }
-
-.dirty-matcha-latte-animation {
-  position: absolute;
-  top: 5px;
-  left: 1403px;
-  width: 252px;
-  height: 447px;
+#dirtymatcha_card{
+  left: 1310px;
 }
 
 .coffee-clipping {
@@ -599,11 +567,42 @@
   width: 100%;
 }
 
-.product-box2.active{
-  cursor: grabbing;
-  cursor: -webkit-grabbing;
-
+.non-coffee-clipping {
+  position: absolute;
+  height: 526px;
+  width: 98.31% !important;
+  margin: 0 !important;
+  top: 50px;
+  right: 0.85%;
+  left: 0.85%;
+  z-index: 4;
+  scroll-snap-type: x mandatory;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  display: flex;
+  user-select: none;
 }
+
+.non-coffee-clipping::-webkit-scrollbar{
+  width: 100%;
+}
+
+.honey-ginger-animation {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  width: 252px;
+  height: 447px;
+}
+
+.chocolate-animation {
+  position: absolute;
+  top: 0;
+  left: 311px;
+  width: 252px;
+  height: 447px;
+}
+
 .menu-container,
 .nav {
   display: flex;
@@ -640,7 +639,7 @@
 }
 .loc_title_bg {
   width: 663px;
-  position: relative;
+  position: absolute;
   border-radius: var(--br-30xl) var(--br-79xl) 0 0;
   background-color: var(--color-dimgray-200);
   height: 113px;
@@ -784,6 +783,7 @@
   color: var(--color-dimgray-400);
 }
 .location_container {
+  padding-top: 10%;
   align-self: stretch;
   height: 1105px;
   flex-direction: row;
@@ -793,6 +793,7 @@
   box-sizing: border-box;
   gap: var(--gap-11xl);
   color: var(--color-linen);
+  z-index: 0;
 }
 .extention,
 .wave-bg {
